added first stage of api functionality: the ability to upload an exam

--- a/static/upload_test.html
+++ b/static/upload_test.html
@@ -20,7 +20,7 @@
 			<section>
 				<form
 					id="upload-test"
-					action="#"
+					action="https://eq2kp86y6k.execute-api.us-east-1.amazonaws.com/upload-exam"
 					method="POST"
 					enctype="multipart/form-data"
 				>
@@ -34,9 +34,9 @@
 
 					<label for="period">Periodo:</label>
 					<select id="period" name="period" required>
-						<option value="spring">Primavera</option>
-						<option value="summer">Verano</option>
-						<option value="autumn">Otoño</option>
+						<option value="primavera">Primavera</option>
+						<option value="verano">Verano</option>
+						<option value="otoño">Otoño</option>
 					</select>
 					<br><br>
 
