--- a/static/upload_test.html
+++ b/static/upload_test.html
@@ -25,11 +25,11 @@
 					enctype="multipart/form-data"
 				>
 					<label for="course-code">Código del curso:</label>
-					<input type="text" id="course-code" name="course_code" required>
+					<input type="text" id="course-code" name="code" required>
 					<br><br>
 
 					<label for="course-name">Nombre del curso:</label>
-					<input type="text" id="course-name" name="course_name" required>
+					<input type="text" id="course-name" name="name" required>
 					<br><br>
 
 					<label for="period">Periodo:</label>
@@ -55,11 +55,11 @@
 					<input type="text" id="prof" name="prof">
 					<br><br>
 
-					<label for="test-file">Examen:</label>
+					<label for="exam-file">Examen:</label>
 					<input
 						type="file"
-						id="test-file"
-						name="test_file"
+						id="exam-file"
+						name="file"
 						accept=".pdf,.docx,.jpg"
 						required
 					>
