--- a/static/index.html
+++ b/static/index.html
@@ -12,19 +12,20 @@
 		<main>
 			<nav>
 				<ul>
-					<li><a href="./index.html">Página principal</a></li>
-					<li><a href="./upload_test.html">Subir un examen</a></li>
+					<li><a href="index.html">Página principal</a></li>
+					<li><a href="upload_test.html">Subir un examen</a></li>
 					<li><a href="#">Todos los cursos</a></li>
 				</ul>
 			</nav>
 			<section>
-				<form action="#" method="GET">
-					<label for="query">Nombre del curso o código:</label>
-					<input type="text" id="query" name="query" placeholder="(e.g. MAT-24431)">
+				<form id="course-search" action="#" method="GET">
+					<label for="pattern">Nombre del curso o código:</label>
+					<input type="text" id="pattern" name="pattern" placeholder="(e.g. MAT-24431)">
 					<button type="submit">Buscar</button>
 				</form>
 				<p>Bienvenido. Aquí puedes consultar y subir exámenes pasados.</p>
 			</section>
+			<div id="course-results"></div>
 		</main>
 		<footer>
 			<p>
@@ -32,5 +33,6 @@
 				<a href="https://github.com/" target="_blank">Repórtalo en Github</a>.
 			</p>
 		</footer>
+		<script src="course_search.js"> </script>
 	</body>
 </html>
