cleaned and reorganized code

--- a/static/index.html
+++ b/static/index.html
@@ -12,8 +12,8 @@
 		<main>
 			<nav>
 				<ul>
-					<li><a href="index.html">Página principal</a></li>
-					<li><a href="upload_test.html">Subir un examen</a></li>
+					<li><a href="./index.html">Página principal</a></li>
+					<li><a href="./upload.html">Subir un examen</a></li>
 					<li><a href="#">Todos los cursos</a></li>
 				</ul>
 			</nav>
@@ -33,6 +33,6 @@
 				<a href="https://github.com/" target="_blank">Repórtalo en Github</a>.
 			</p>
 		</footer>
-		<script src="course_search.js"> </script>
+		<script src="./scripts/search.js"> </script>
 	</body>
 </html>
