--- a/static/upload.html
+++ b/static/upload.html
@@ -18,8 +18,9 @@
 				</ul>
 			</nav>
 			<section>
+				<div id="upload-message"></div>
 				<form
-					id="upload-test"
+					id="upload-exam"
 					method="POST"
 					enctype="multipart/form-data"
 				>
@@ -59,7 +60,7 @@
 						type="file"
 						id="exam-file"
 						name="file"
-						accept=".pdf,.docx,.jpg"
+						accept=".pdf"
 						required
 					>
 					<br><br>
@@ -74,31 +75,6 @@
 				<a href="https://github.com/" target="_blank">Repórtalo en Github</a>.
 			</p>
 		</footer>
-		<script>
-			document.getElementById("upload-test").addEventListener("submit", async function (event) {
-				event.preventDefault();
-
-				const form = event.target;
-				const formData = new FormData(form);
-				const lambdaUrl = "https://p32k4p66fx7b24cgnjt5n5kszq0cwiwl.lambda-url.us-east-1.on.aws/"
-
-				try {
-					const response = await fetch(lambdaUrl, {
-						method: "POST",
-						body: formData,
-					});
-					console.log(response)
-
-					if (!response.ok) {
-							throw new Error(`HTTP error! status: ${response.status}`);
-					}
-
-					const result = await response.json();
-					console.log("Success:", result);
-				} catch (error) {
-					console.error("Error:", error);
-				}
-			});
-		</script>
+		<script src="./scripts/upload.js"></script>
 	</body>
 </html>
