--- a/static/detail.html
+++ b/static/detail.html
@@ -7,13 +7,13 @@
 	</head>
 	<body>
 		<header>
-			<h1>Course detail</h1>
+			<h1 id="course-name"></h1>
 		</header>
 		<main>
 			<nav>
 				<ul>
-					<li><a href="index.html">Página principal</a></li>
-					<li><a href="upload_test.html">Subir un examen</a></li>
+					<li><a href="./index.html">Página principal</a></li>
+					<li><a href="./upload.html">Subir un examen</a></li>
 					<li><a href="#">Todos los cursos</a></li>
 				</ul>
 			</nav>
@@ -28,6 +28,6 @@
 				<a href="https://github.com/" target="_blank">Repórtalo en Github</a>.
 			</p>
 		</footer>
-		<script src="detail.js"> </script>
+		<script src="./scripts/detail.js"> </script>
 	</body>
 </html>
