--- a/static/upload.html
+++ b/static/upload.html
@@ -14,7 +14,7 @@
 				<ul>
 					<li><a href="./index.html">Página principal</a></li>
 					<li><a href="./upload.html">Subir un examen</a></li>
-					<li><a href="#">Todos los cursos</a></li>
+					<li><a href="./all.html">Todos los cursos</a></li>
 				</ul>
 			</nav>
 			<section>
