fixed a font-size issue and added instructions for uploading exams

--- a/static/index.html
+++ b/static/index.html
@@ -25,7 +25,7 @@
 				<div class="instructions">
 					<p>Bienvenido. Aquí puedes consultar y subir exámenes pasados.</p>
 					<p>
-						Instrucciones: Las búsquedas son parciales, así que no es necesario
+						Instrucciones: las búsquedas son parciales, así que no es necesario
 						escribir el código o nombre completo del curso.
 					</p>
 				</div>
