fixed text formatting

--- a/static/index.html
+++ b/static/index.html
@@ -31,7 +31,7 @@
 				</div>
 				<div class="separator"></div>
 				<form id="course-search" action="#" method="GET">
-					<input type="text" id="pattern" name="pattern" placeholder="(e.g. MAT-24431)">
+					<input type="text" id="pattern" name="pattern" placeholder="(e.g. mat-24431)">
 					<button type="submit" class="btn">Buscar</button>
 				</form>
 				<div id="course-results"></div>
