--- a/static/upload.html
+++ b/static/upload.html
@@ -47,9 +47,9 @@
 
 					<label for="period">Periodo:</label>
 					<select id="period" name="period" required>
-						<option value="primavera">Primavera</option>
-						<option value="verano">Verano</option>
-						<option value="otoño">Otoño</option>
+						<option value="primavera">primavera</option>
+						<option value="verano">verano</option>
+						<option value="otoño">otoño</option>
 					</select><br><br>
 
 					<label for="year">Año:</label>
