--- a/static/upload.html
+++ b/static/upload.html
@@ -63,6 +63,14 @@
 							required
 							><br><br>
 
+					<label for="exam-num">Número de parcial (opcional):</label>
+						<input
+							type="number"
+							id="exam-num"
+							name="exam-num"
+							min="1"
+							><br><br>
+
 					<label for="prof">Profesor (opcional):</label>
 					<input type="text" id="prof" name="prof"><br><br>
 
