migrated gromov -> cartan

--- a/static/index.html
+++ b/static/index.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>gromov</title>
 		<link rel="stylesheet" href="https://unpkg.com/@sakun/system.css" />
 		<link rel="stylesheet" href="./style.css">
+		<title>cartan</title>
 	</head>
 	<body>
 		<div class="window container">
