--- a/static/upload.html
+++ b/static/upload.html
@@ -5,7 +5,7 @@
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
 			<link rel="stylesheet" href="https://unpkg.com/@sakun/system.css" />
 			<link rel="stylesheet" href="./style.css" />
-			<title>gromov</title>
+			<title>cartan</title>
 	</head>
 	<body>
 		<div class="window container">
