--- a/static/upload.html
+++ b/static/upload.html
@@ -24,12 +24,12 @@
 			<main>
 				<div class="instructions">
 					<p>
-						Instrucciones: por el momento solo acepto archivos en .pdf. Pienso
-						agregar funcionalidad para .doc, .jpg, etcétera cuando tenga tiempo.
-						Si una materia está seriada, escribir el nombre con número romano
+						Instrucciones:
+						si una materia está seriada, escribir el nombre con número romano
 						(e.g. eco v en vez de eco 5). Es preferible usar el nombre exacto de
 						la materia, de otra forma se crean categorías distintas y es más difícil
-						encontrar exámenes para una misma materia.
+						encontrar exámenes para una misma materia. Checar si ya existe una
+						categoría para el examen que quieras subir y usar ese nombre.
 					</p>
 				</div>
 				<div class="separator"></div>
