changed name, updated github link, and added a favicon

--- a/static/upload.html
+++ b/static/upload.html
@@ -3,6 +3,14 @@
 	<head>
 			<meta charset="utf-8">
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+			<! -- favicon -- !>
+			<link rel="apple-touch-icon" sizes="180x180" href="icons/apple-touch-icon.png">
+			<link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
+			<link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
+			<link rel="manifest" href="icons/site.webmanifest">
+
+			<! -- style -- !>
 			<link rel="stylesheet" href="https://unpkg.com/@sakun/system.css" />
 			<link rel="stylesheet" href="./style.css" />
 			<title>cartan</title>
@@ -11,7 +19,7 @@
 		<div class="window container">
 			<header>
 				<div class="title-bar">
-					<h1 class="title">Biblioteca de Exámenes ITAM</h1>
+					<h1 class="title">Repositorio de Exámenes ITAM</h1>
 				</div>
 				<nav class="details-bar" style="justify-content: center">
 					<ul role="menu-bar">
@@ -93,7 +101,7 @@
 			<footer>
 				<p>
 					¿Encontraste un bug?
-					<a href="https://github.com/" target="_blank">Repórtalo en Github</a>.
+					<a href="https://github.com/tempdata73/cartan" target="_blank">Repórtalo en Github</a>.
 				</p>
 			</footer>
 		</div>
