--- a/static/all.html
+++ b/static/all.html
@@ -5,10 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 		<! -- favicon -- !>
-		<link rel="apple-touch-icon" sizes="180x180" href="icons/apple-touch-icon.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
-		<link rel="manifest" href="icons/site.webmanifest">
+		<link rel="icon" type="image/x-icon" href="icons/favicon.ico">
 
 		<! -- style -- !>
 		<link rel="stylesheet" href="https://unpkg.com/@sakun/system.css" />
